compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/common.kt:3:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect abstract class Writer protected constructor()
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/jvm.kt:3:18: error: 'actual typealias Writer = Writer' has no corresponding members for expected class members:

    expect constructor(): Writer

    The following declaration is incompatible because visibility is different:
        constructor(): Writer

actual typealias Writer = java.io.Writer
                 ^^^^^^
